--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=Online-library-management-system
+
+# application.properties
+spring.profiles.active=dev
+spring.jpa.show-sql=true
+
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.maximum-pool-size=20
